--- a/package.json
+++ b/package.json
@@ -1,16 +1,5 @@
 {
   "name": "quantum-dex",
   "version": "1.0.0",
-  "type": "module",
-  "dependencies": {
-    "@openzeppelin/contracts": "^5.4.0"
-  },
-  "devDependencies": {
-    "@nomicfoundation/hardhat-toolbox-viem": "^5.0.1",
-    "@types/node": "^24.10.1",
-    "hardhat": "^3.0.15",
-    "ts-node": "^10.9.2",
-    "tslib": "^2.8.1",
-    "typescript": "^5.9.3"
-  }
+  "type": "module"
 }
