--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
   },
   "devDependencies": {
     "@nomicfoundation/hardhat-toolbox-viem": "^5.0.1",
+    "@types/chai": "^5.2.3",
     "@types/node": "^24.10.1",
+    "chai": "^6.2.1",
     "hardhat": "^3.0.15",
     "ts-node": "^10.9.2",
     "tslib": "^2.8.1",
